Fix compatibility issue with Java 8